# BERT

./: .gitignore  README.md  bert.py  dataset.py  pyproject.toml  requirements.txt  run_finetuning.py  run_mlm.py  run_pretraining.py  tokenizers.py
config/: jawiki.yaml  livedoor.yaml
